Changes since version 3.0.1
---------------------------

- Added ability to configure Ice thread start/stop hooks through
  InitializationData.

- Added SSL authorization as an alternative to username/password
  for Glacier2.  To authorize with SSL call
  Glacier2::Router::createSessionFromSecureConnection().  On the
  server side Glacier2::SSLPermissionsVerifier and
  Glacier2::SSLSessionManager must be implemented.

- Added identityToString and stringToIdentity to the Communicator
  interface. If a string converter is configured these functions
  must be used instead of the current static functions.

- Added ability to configure user defined string and wstring 
  converters that are used during marshalling/unmarshalling to
  convert between UTF8 as required in the over-the-wire stream
  and the users character set.

- Added operators <=, > and >= for slice classes, proxies and
  structures.

- Added method to allow a Glacier2 session to be destroyed from a 
  backend server.

- It is now permissible to recreate a new object adapter with the same 
  name as an old adapter once waitForDeactivate() has returned on the
  old adapter.

- Added new method Ice::Communicator::createObjectAdapterWithRouter()
  which creates a routed object adapter. A object adapter can now only
  have one router associated with it, which is set with using this 
  method or by setting the <AdapterName>.Router property.  Also
  as a result of this the Ice::ObjectAdapter::addRouter() and
  Ice::ObjectAdapter::removeRouter() methods have been removed.

- Added property sets to IceGrid descriptors. Property sets allow to
  define set of properties in applications, nodes and templates
  descriptors. These property sets can then be referenced from the
  server, service and instance descriptors. See the IceGrid chapter in
  the Ice manual for more information.

- Changed the IceGrid::Admin::getApplicationDescriptor method to
  return the application descriptor without any variable